[metadata]
name = influenciayoutube
version = 0.0.2
author = Laurent MARTINEAU
author_email = l.martineau971@gmail.com
description = An another small youtube scrapper project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/owl2/youtube-scrapper
project_urls =
    Bug Tracker = https://github.com/owl2/youtube-scrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src